site with blog and paginate v2

--- a/_blog/2019-12-16-blog-2.md
+++ b/_blog/2019-12-16-blog-2.md
@@ -12,4 +12,4 @@ tags: [clases]
 
 ### Calidad del Software
 
-Es el grado con el que un sistema, componente o proceso cumple los requerimientos especificados y las necesidades o expectativas del cliente o usuario.
+Es el grado con el que un sistema, componente o procesoo cumple los requerimientos especificados y las necesidades o expectativas del cliente o usuario.
