--- a/_blog/2019-12-16-blog-1.md
+++ b/_blog/2019-12-16-blog-1.md
@@ -1,4 +1,4 @@
----
+﻿---
 layout: post
 title: Blog 1
 date: 2019-12-16 13:32:20 +0300
@@ -10,4 +10,4 @@ tags: [clases, blog]
 
 ## Definición de IS
 
-La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.
+La ingeniería de software es una aplicación prácticaa del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.
